force-app/main/default/objects/sugati__Country__c/sugati__Country__c.object-meta.xml
<CustomObject>
    <description>Store a list of Countries</description>
    <label>Country</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>