force-app/main/default/objects/sugati__Country__c/fields/sugati__C_Archive__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>