force-app/main/default/objects/sugati__Country__c/fields/sugati__C_Continent__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Continent__c</fullName>
    <inlineHelpText>Which region is the country in?</inlineHelpText>
    <label>Continent</label>
    <referenceTo>sugati__Continent__c</referenceTo>
    <relationshipLabel>Countries</relationshipLabel>
    <relationshipName>Countries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>