force-app/main/default/objects/sugati__Country__c/fields/sugati__C_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>