force-app/main/default/objects/sugati__Country__c/fields/sugati__C_Holiday_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Holiday_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Type</label>
    <referenceTo>sugati__Holiday_Type__c</referenceTo>
    <relationshipLabel>Countries</relationshipLabel>
    <relationshipName>Countries</relationshipName>
    <type>Lookup</type>
</CustomField>