force-app/main/default/objects/sugati__Country__c/fields/sugati__C_Holiday_Types__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Holiday_Types__c</fullName>
    <label>Holiday Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Couples</fullName>
            </value>
            <value>
                <fullName>Luxury Holidays</fullName>
            </value>
            <value>
                <fullName>Diving</fullName>
            </value>
            <value>
                <fullName>Big Short Breaks</fullName>
            </value>
            <value>
                <fullName>Solo</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Babymoon</fullName>
            </value>
            <value>
                <fullName>Adventures</fullName>
            </value>
            <value>
                <fullName>Honeymoon</fullName>
            </value>
            <value>
                <fullName>Stag/Hen</fullName>
            </value>
            <value>
                <fullName>Family Holiday</fullName>
            </value>
            <value>
                <fullName>Anniversary</fullName>
            </value>
            <value>
                <fullName>Expert-Led Journeys</fullName>
            </value>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Classics</fullName>
            </value>
            <value>
                <fullName>Dive In Style</fullName>
            </value>
            <value>
                <fullName>OTUK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>