force-app/main/default/objects/sugati__Country__c/fields/sugati__C_Interest__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Interest__c</fullName>
    <label>Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diving</fullName>
            </value>
            <value>
                <fullName>Fine Dining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>