force-app/main/default/objects/sugati__Country__c/fields/sugati__C_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Margin__c</fullName>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>