force-app/main/default/objects/sugati__Country__c/fields/sugati__C_Our_Opinion__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Our_Opinion__c</fullName>
    <label>Our Opinion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>