force-app/main/default/objects/sugati__Country__c/fields/sugati__C_Quote__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Quote__c</fullName>
    <label>Quote</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>