force-app/main/default/objects/sugati__Country__c/fields/sugati__C_Total_Cost_in_Reporting_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Total_Cost_in_Reporting_Currency__c</fullName>
    <inlineHelpText>Total cost for this country.</inlineHelpText>
    <label>Total Cost in Reporting Currency</label>
    <summarizedField>sugati__Travelling_Country__c.sugati__TC_Total_Cost_in_Reporting_Currency__c</summarizedField>
    <summaryForeignKey>sugati__Travelling_Country__c.sugati__TC_Country__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>