force-app/main/default/objects/sugati__Country__c/fields/sugati__S_C_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Status_Message__c</fullName>
    <label>Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>