force-app/main/default/objects/sugati__Country__c/fields/sugati__Total_Revenue_in_Reporting_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__Total_Revenue_in_Reporting_Currency__c</fullName>
    <inlineHelpText>Total sale for the country.</inlineHelpText>
    <label>Total Revenue in Reporting Currency</label>
    <summarizedField>sugati__Travelling_Country__c.sugati__TC_Total_Sell_in_Reporting_Currency__c</summarizedField>
    <summaryForeignKey>sugati__Travelling_Country__c.sugati__TC_Country__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>