force-app/main/default/objects/sugati__Country__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__C_Archive__c</columns>
    <columns>sugati__C_Continent__c</columns>
    <columns>sugati__C_Country_Code__c</columns>
    <columns>sugati__C_EU__c</columns>
    <columns>sugati__C_Holiday_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>